new bootils website

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>Bootils by oriolet</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/apple-touch-icon-76x76.png">
+  <link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="images/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="images/favicons/manifest.json">
+  <meta name="msapplication-TileColor" content="#f2f2f2">
+  <meta name="theme-color" content="#ffffff">
   </head>
 
   <body>
@@ -23,98 +33,50 @@
         </header>
 
         <section id="downloads" class="clearfix">
+          <a href="/" id="home" class="button"><span>Homepage</span></a>
+          <a href="/features/" id="features" class="button"><span>Features</span></a>
+          <a href="/getting-started/" id="getting-started" class="button"><span>Geetting started</span></a>
+          <a href="https://github.com/oriolet/Bootils" id="view-on-github" class="button"><span>View on GitHub</span></a>
           <a href="https://github.com/oriolet/Bootils/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/oriolet/Bootils/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/oriolet/Bootils" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
 
         <section id="main_content">
-          <h3>
-<a id="bootils-is-easy" class="anchor" href="#bootils-is-easy" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bootils is easy!</h3>
+          <h1>
+<a id="bootils-is-easy" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Bootils!</h1>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in convallis sapien. Sed pretium placerat tortor, in vulputate libero dapibus at. Curabitur imperdiet lectus felis, nec dictum lorem venenatis sed. Quisque in molestie lacus, ut rutrum dolor. Sed neque erat, commodo non magna eget.</p>
-
-<h2>
-<a id="start" class="anchor" href="#start" aria-hidden="true"><span class="octicon octicon-link"></span></a>Start</h2>
-
-<pre><code>require_once('bootils/start.bootils.php');
-</code></pre>
+<p>Bootils includes over 25 functions to facilitate your work with PHP, and two extra libraries to improve some common tasks such as debugging or sending emails. Discover the details of these <a href="/features/">features</a></p>
 
 <h2>
-<a id="configure" class="anchor" href="#configure" aria-hidden="true"><span class="octicon octicon-link"></span></a>Configure</h2>
-
-<p>Edit config.bootils.php to configure bootils and customize it!!</p>
+<a id="start" class="anchor" href="#how" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does it work?</h2>
+<p>The easiest way is simply a require_once, but if you wish or need, you can <a href="/getting-started/">define default values</a> before the required file bootils file</p>
 
 <h2>
-<a id="regional-configuration" class="anchor" href="#regional-configuration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Regional configuration</h2>
-
-<pre><code>$_bootils['DEFAULT_LANGUAGE_LOCALE'] = 'ca_ES';// Default value is en_GB
-$_bootils['DEFAULT_DATE_FORMAT'] = '%A, %e de %B de %Y';// Default value is %A %d %B %
-$_bootils['DEFAULT_COMA_SEPARATOR'] = ',';// Default value is .
-$_bootils['DEFAULT_THOUSAND_SEPARATOR'] = '.';// Default value is ,
-</code></pre>
+<a id="regional-configuration" class="anchor" href="#locales" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bootils is ready to work with the different locales</h2>
+<p>It includes functions to detect the language preference of the user, and to define locales quickly</p>
 
 <h2>
 <a id="bootils-include-kint" class="anchor" href="#bootils-include-kint" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bootils include Kint!</h2>
 
-<p>You can enable it easy.</p>
-
-<pre><code>$_bootils['KINT'] = true;
-</code></pre>
+<p>Kint is a beautiful replacement for var_dump(), print_r() and debug_backtrace(). You can enable or disable it easy.</p>
 
 <h2>
 <a id="bootils-include-swiftmailer" class="anchor" href="#bootils-include-swiftmailer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bootils include Swiftmailer!</h2>
 
-<p>You can enable it easy.</p>
-
-<pre><code>$_bootils['SWIFTMAILER'] = true;
-</code></pre>
+<p>Swiftmailer is a powerfoul component based mailing library for PHP. You can enable or disable it easy.</p>
 
 <h2>
-<a id="general-mail-configuration" class="anchor" href="#general-mail-configuration" aria-hidden="true"><span class="octicon octicon-link"></span></a>General mail configuration</h2>
+<a id="general-mail-configuration" class="anchor" href="#emails" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bootils send your emails easily.</h2>
 
-<p>If you use Swiftmail or not, some mail settings can be configured</p>
-
-<pre><code>$_bootils['MAIL_CHARSET']='UTF-8';// Default value is UTF-8
-$_bootils['MAIL_CHARSET_PLAIN']='UTF-8';// Default value is UTF-8
-$_bootils['MAIL_CHARSET_HTML']='UTF-8';// Default value is UTF-8
-$_bootils['MAIL_SENDER_MAIL']="sender@example.org";// Default value is blank
-$_bootils['MAIL_SENDER_NAME']="Sender Name";// Default value is blank
-</code></pre>
+<p>It does not matter if we have Swiftmailer activated or not, you can always use the same function to send emails</p>
 
 <h2>
-<a id="smtp-mail-configuration" class="anchor" href="#smtp-mail-configuration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Smtp mail configuration</h2>
+<a id="errors-configuration" class="anchor" href="#errors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Errors configuration</h2>
 
-<p>These functions simply set them, if Swiftmail is enabled</p>
+<p>With bootils be easy to define what we want to show PHP errors</p>
 
-<pre><code>$_bootils['SMTP_HOST']="localhost";// Default value is localhost
-$_bootils['SMTP_USER']="mailusername";// Default value is blank
-$_bootils['SMTP_PASSWORD']="mailpassword";// Default value is blank
-$_bootils['SMTP_PORT']=25;// Default value is 25
-
-$_bootils['SMTP_ANTIFLOOD']=true;// For massive sending (default true)
-$_bootils['SMTP_ANTIFLOOD_MAILS']=100;// number of emails between breaks (default 100)
-$_bootils['SMTP_ANTIFLOOD_PAUSE']=30;// Seconds-long break before continuing (default 30)
-</code></pre>
-
-<h2>
-<a id="errors-configuration" class="anchor" href="#errors-configuration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Errors configuration</h2>
-
-<p>Define the errors you want to register, and if you want to display it on screen</p>
-
-<pre><code>$_bootils['ERROR_REPORTING']=true;
-$_bootils['HIDE_ERROR'] = true;
-$_bootils['HIDE_RECOVERABLE_ERROR'] = true;
-$_bootils['HIDE_WARNING'] = true;
-$_bootils['HIDE_PARSE'] = true;
-$_bootils['HIDE_STRICT'] = true;
-$_bootils['HIDE_NOTICE'] = true;
-$_bootils['HIDE_USER_DEPRECATED'] = true;
-$_bootils['HIDE_DEPRECATED'] = true;
-$_bootils['DISPLAY_ERRORS']=true; //To see the errors on the web or only in log files
-</code></pre>
         </section>
 
         <footer>
