--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="/" id="home" class="button"><span>Homepage</span></a>
-          <a href="/features/" id="features" class="button"><span>Features</span></a>
-          <a href="/getting-started/" id="getting-started" class="button"><span>Geetting started</span></a>
+          <a href="http://oriolet.github.io/Bootils/" id="home" class="button"><span>Homepage</span></a>
+          <a href="http://oriolet.github.io/Bootils/features/" id="features" class="button"><span>Features</span></a>
+          <a href="http://oriolet.github.io/Bootils/getting-started/" id="getting-started" class="button"><span>Geetting started</span></a>
           <a href="https://github.com/oriolet/Bootils" id="view-on-github" class="button"><span>View on GitHub</span></a>
           <a href="https://github.com/oriolet/Bootils/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/oriolet/Bootils/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
@@ -47,11 +47,11 @@
           <h1>
 <a id="bootils-is-easy" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Bootils!</h1>
 
-<p>Bootils includes over 25 functions to facilitate your work with PHP, and two extra libraries to improve some common tasks such as debugging or sending emails. Discover the details of these <a href="/features/">features</a></p>
+<p>Bootils includes over 25 functions to facilitate your work with PHP, and two extra libraries to improve some common tasks such as debugging or sending emails. Discover the details of these <a href="http://oriolet.github.io/Bootils/features/">features</a></p>
 
 <h2>
 <a id="start" class="anchor" href="#how" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does it work?</h2>
-<p>The easiest way is simply a require_once, but if you wish or need, you can <a href="/getting-started/">define default values</a> before the required file bootils file</p>
+<p>The easiest way is simply a require_once, but if you wish or need, you can <a href="http://oriolet.github.io/Bootils/getting-started/">define default values</a> before the required file bootils file</p>
 
 <h2>
 <a id="regional-configuration" class="anchor" href="#locales" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bootils is ready to work with the different locales</h2>
