--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -33,9 +33,9 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="/" id="home" class="button"><span>Homepage</span></a>
-          <a href="/features/" id="features" class="button"><span>Features</span></a>
-          <a href="/getting-started/" id="getting-started" class="button"><span>Geetting started</span></a>
+          <a href="http://oriolet.github.io/Bootils/" id="home" class="button"><span>Homepage</span></a>
+          <a href="http://oriolet.github.io/Bootils/features/" id="features" class="button"><span>Features</span></a>
+          <a href="http://oriolet.github.io/Bootils/getting-started/" id="getting-started" class="button"><span>Geetting started</span></a>
           <a href="https://github.com/oriolet/Bootils" id="view-on-github" class="button"><span>View on GitHub</span></a>
           <a href="https://github.com/oriolet/Bootils/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/oriolet/Bootils/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
