--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -28,8 +28,8 @@
       <div class="inner">
 
         <header>
-          <h1>Bootils</h1>
-          <h2>Over 25 basic functions that your PHP projects must have</h2>
+          <h1><b>B</b>ootils</h1>
+          <h2>Basic functions that your PHP projects must have</h2>
         </header>
 
         <section id="downloads" class="clearfix">
