--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="inner">
 
         <header>
-          <h1>Bootils</h1>
-          <h2>Over 25 basic functions that your PHP projects must have</h2>
+          <h1><b>B</b>ootils</h1>
+          <h2>Basic functions that your PHP projects must have</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -47,7 +47,7 @@
           <h1>
 <a id="bootils-is-easy" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Bootils!</h1>
 
-<p>Bootils includes over 25 functions to facilitate your work with PHP, and two extra libraries to improve some common tasks such as debugging or sending emails. Discover the details of these <a href="http://oriolet.github.io/Bootils/features/">features</a></p>
+<p>Bootils includes over 20 functions to facilitate your work with PHP, and two extra libraries to improve some common tasks such as debugging or sending emails. Discover the details of these <a href="http://oriolet.github.io/Bootils/features/">features</a></p>
 
 <h2>
 <a id="start" class="anchor" href="#how" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does it work?</h2>
