--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="inner">
 
         <header>
-          <h1><b>B</b>ootils</h1>
+          <h1>B<b>o</b>otils</h1>
           <h2>Basic functions that your PHP projects must have</h2>
         </header>
 
