change for adapt to class system

--- a/features/index.html
+++ b/features/index.html
@@ -29,7 +29,7 @@
 
         <header>
           <h1>Bootils</h1>
-          <h2>Over 25 basic functions that your PHP projects must have</h2>
+          <h2>Basic utilities for PHP developers</h2>
         </header>
 
         <section id="downloads" class="clearfix">
