change dev-master to dev-stable in getting started

--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -60,7 +60,7 @@ $bootils = new Bootils\Core();</code></pre>
 <p>Installation using Composer (the php package manager)</p>
 <pre><code> "require": {
        ...
-       "oriolet/bootils": "dev-master"
+       "oriolet/bootils": "dev-stable"
     }</code></pre>
 <h2>
 <pre><code>// Require the library
