typographic error solved

--- a/features/index.html
+++ b/features/index.html
@@ -482,7 +482,7 @@ fastMail($to,"my first email","My HTML body",$extras);</code></pre>
   getUserLanguages()
 </h3>
 <p>Returns an array (neat to priorities) with user languages.</p>
-<pre class="params"><code>egetUserLanguages ( ) </code></pre>
+<pre class="params"><code>getUserLanguages ( ) </code></pre>
 <pre class="callback"><code>$result = getUserLanguages();</code></pre>
 <pre class="output"><code>array(3) [
     string (2) "ca"
