--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -67,7 +67,7 @@ $bootils = new Bootils\Core();</code></pre>
 require_once('vendor/autoload.php');
 
 // Initialize it
-$bootils = new Bootils\Core();</code></pre>
+$bootils = new \Bootils\Core();</code></pre>
 
 <a id="start" class="anchor" href="#custom" aria-hidden="true"><span class="octicon octicon-link"></span></a>Optional bootils values</h2>
 <p>You can configure bootils after started, in the sample (In the examples we set the defaults already have, if not configured)</p>
