--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -55,20 +55,20 @@
 require_once('bootils/Bootils.php');
 
 // Initialize it
-$bootils = new Bootils\Core();</code></pre>
+$bootils = new \Bootils\Core();</code></pre>
 
 <p>Installation using Composer (the php package manager)</p>
 <pre><code> "require": {
        ...
        "oriolet/bootils": "dev-stable"
     }</code></pre>
-<h2>
 <pre><code>// Require the library
 require_once('vendor/autoload.php');
 
 // Initialize it
 $bootils = new \Bootils\Core();</code></pre>
 
+<h2>
 <a id="start" class="anchor" href="#custom" aria-hidden="true"><span class="octicon octicon-link"></span></a>Optional bootils values</h2>
 <p>You can configure bootils after started, in the sample (In the examples we set the defaults already have, if not configured)</p>
 
