fixed documentation error

--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -92,7 +92,7 @@ $bootils->e_strict = true;
 $bootils->e_notice = true;
 $bootils->e_deprecated = true;
 $bootils->e_user_deprecated = true;
-$bootils->php_errors();
+$bootils->phpErrors();
 
 // Mail general values
 $bootils->setMailCharset = 'UTF-8';
